objects/Licence__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licences</relationshipLabel>
        <relationshipName>Licences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_materials__c</fullName>
        <label>% commission materials</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_profit__c</fullName>
        <inlineHelpText>For OC Profit Split only</inlineHelpText>
        <label>% commission profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_profit_as_facilitator__c</fullName>
        <inlineHelpText>For OC Profit Spit only</inlineHelpText>
        <label>% commission profit, as Facilitator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_services__c</fullName>
        <label>% commission services</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_services_as_facilitator__c</fullName>
        <label>% commission services, as Facilitator</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_services_for_ensi__c</fullName>
        <label>% commission services, for ENSI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licence_Rollover_Date__c</fullName>
        <inlineHelpText>Date a new licence rollover letter sent</inlineHelpText>
        <label>Licence Rollover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licence_Signed__c</fullName>
        <inlineHelpText>Enter the date when the ENSI licence was signed</inlineHelpText>
        <label>Licence Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_Region__c</fullName>
        <inlineHelpText>Enter the region where this licensee or marketer is located</inlineHelpText>
        <label>Licensee Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Licensee_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensee_Reporting__c</fullName>
        <inlineHelpText>Should this person be included in the monthly reporting on business activity?</inlineHelpText>
        <label>Licensee Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>commission_profit_for_ENSI__c</fullName>
        <inlineHelpText>For OC Profit Split only</inlineHelpText>
        <label>% commission profit, for ENSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Licence</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Licence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>